increase log messages